--- a/workflows/hugo.yaml
+++ b/workflows/hugo.yaml
@@ -63,7 +63,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: ./public
+          path: ./2024-hugo/public
 
   # Deployment job
   deploy:
