--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -56,6 +56,7 @@ jobs:
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
         run: |
+          cd 2024-hugo && \
           hugo \
             --gc \
             --minify \
